src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_ascii(\"erDiagram\\nUSER ||--o{ POST : has\")"
---
+--------+          +--------+
|  USER  |          |  POST  |
+--------+   has    +--------+
|        -|--------o<        |
+--------+          +--------+
