src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_attribute_with_pk.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nUSER {\\n  int id PK\\n}\\nUSER ||--o{ POST : x\")"
---
┌─────────────┐          ┌────────┐
│    USER     │          │  POST  │
├─────────────┤    x     ├────────┤
│ int id PK   ─┃────────o<        │
│             │          └────────┘
└─────────────┘
