src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_entity_with_attributes.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nUSER {\\n  int id PK\\n  string name\\n}\\nUSER ||--o{ POST : has\")"
---
┌───────────────┐          ┌────────┐
│     USER      │          │  POST  │
├───────────────┤   has    ├────────┤
│ int id PK     ─┃────────o<        │
│ string name   │          └────────┘
│               │
└───────────────┘
