src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_one_to_many.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nA ||--o{ B : many\")"
---
┌─────┐          ┌─────┐
│  A  │          │  B  │
├─────┤  many    ├─────┤
│     ─┃────────o<     │
└─────┘          └─────┘
