src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_one_to_one_non_identifying_dotted.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nA ||..|| B : opt\")"
---
┌─────┐          ┌─────┐
│  A  │          │  B  │
├─────┤   opt    ├─────┤
│     ─┃┈┈┈┈┈┈┈┈┃─     │
└─────┘          └─────┘
