src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_relationship_with_label.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(r#\"erDiagram\nUSER ||--o{ POST : \"writes many\"\"#)"
---
┌────────┐          ┌────────┐
│  USER  │          │  POST  │
├────────┤ writes … ├────────┤
│        ─┃────────o<        │
└────────┘          └────────┘
