src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_three_entities_star_schema.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nUSER ||--o{ POST : has\\nUSER ||--o{ COMMENT : writes\\nPOST ||--o{ COMMENT : on\")"
---
┌────────┐          ┌───────────┐          ┌────────┐
│  USER  │          │  COMMENT  │          │  POST  │
├────────┤ writes   ├───────────┤   on     ├────────┤
│        ─┃────────o<           o<─────────┃        │
└────────┘         │└────has────┘│         └────────┘
                   └─────────────┘
