src/mermaid/ascii/er/snapshots/veol__mermaid__ascii__er__render__tests__render_two_entities_minimal.snap
---
source: src/mermaid/ascii/er/render.rs
expression: "render_src(\"erDiagram\\nUSER ||--o{ POST : has\")"
---
┌────────┐          ┌────────┐
│  USER  │          │  POST  │
├────────┤   has    ├────────┤
│        ─┃────────o<        │
└────────┘          └────────┘
